[gd_scene load_steps=9 format=4 uid="uid://5b2rlrob6s1k"]

[ext_resource type="Script" uid="uid://bf118xloowjvx" path="res://Scripts/Levels/Level_1.gd" id="1_8hrue"]
[ext_resource type="Texture2D" uid="uid://77cbry656q5a" path="res://Assets/Tilemap_Flat.png" id="1_qg383"]
[ext_resource type="PackedScene" uid="uid://pnsm65w5j06f" path="res://Scenes/p_tower.tscn" id="2_5ym7g"]
[ext_resource type="PackedScene" uid="uid://7crfo5tq0mv0" path="res://Scenes/e_tower.tscn" id="3_d5e80"]
[ext_resource type="Script" uid="uid://b5lwd4fm6m04m" path="res://Scripts/Enemies/EnemiesManager.gd" id="3_du6dt"]
[ext_resource type="PackedScene" uid="uid://bvakdnf8ig7ev" path="res://Scenes/Actors/Enemies/e_pawn.tscn" id="4_wakao"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bt8xe"]
texture = ExtResource("1_qg383")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0

[sub_resource type="TileSet" id="TileSet_61yiu"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_bt8xe")

[node name="Main" type="Node2D"]
script = ExtResource("1_8hrue")

[node name="World" type="Node2D" parent="."]

[node name="TileMap" type="TileMapLayer" parent="World"]
tile_map_data = PackedByteArray("AAAAAAYAAAAAAAAAAAABAAYAAAABAAAAAAACAAYAAAABAAAAAAADAAYAAAABAAAAAAAEAAYAAAABAAAAAAAFAAYAAAABAAAAAAAGAAYAAAABAAAAAAAHAAYAAAABAAAAAAAIAAYAAAABAAAAAAAJAAYAAAABAAAAAAAKAAYAAAABAAAAAAALAAYAAAABAAAAAAAMAAYAAAABAAAAAAANAAYAAAABAAAAAAAOAAYAAAABAAAAAAAPAAYAAAACAAAAAAAAAAcAAAAAAAEAAAABAAcAAAABAAEAAAACAAcAAAABAAEAAAADAAcAAAABAAEAAAAEAAcAAAABAAEAAAAFAAcAAAABAAEAAAAGAAcAAAABAAEAAAAHAAcAAAABAAEAAAAIAAcAAAABAAEAAAAJAAcAAAABAAEAAAAKAAcAAAABAAEAAAALAAcAAAABAAEAAAAMAAcAAAABAAEAAAANAAcAAAABAAEAAAAOAAcAAAABAAEAAAAPAAcAAAACAAEAAAA=")
tile_set = SubResource("TileSet_61yiu")

[node name="Enemies" type="Node2D" parent="World"]
script = ExtResource("3_du6dt")
units_scn = Array[PackedScene]([ExtResource("4_wakao")])

[node name="SpawnTimer" type="Timer" parent="World/Enemies"]
wait_time = 5.0
autostart = true

[node name="EnemiesTower" parent="World/Enemies" instance=ExtResource("3_d5e80")]
position = Vector2(896, 480)

[node name="UnitsContainer" type="Node2D" parent="World/Enemies"]
position = Vector2(896, 480)

[node name="Soldiers" type="Node2D" parent="World"]

[node name="BlueTower" parent="World/Soldiers" instance=ExtResource("2_5ym7g")]
position = Vector2(64, 480)
script = null

[node name="UnitsContainer" type="Node2D" parent="World/Soldiers"]
position = Vector2(64, 480)

[node name="LevelCanvas" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="LevelCanvas"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GoldLabel" type="Label" parent="LevelCanvas/UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0 Gold"

[node name="Container" type="HBoxContainer" parent="LevelCanvas/UI"]
layout_mode = 0
offset_left = 256.0
offset_top = 544.0
offset_right = 318.0
offset_bottom = 584.0
metadata/_edit_group_ = true

[node name="PawnBtn" type="Button" parent="LevelCanvas/UI/Container"]
layout_mode = 2
disabled = true
text = "Solider"
